applications/openlookeng-bot/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: openlookeng-bot
  name: openlookeng-bot
