applications/openlookeng-bot/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
  name: openlookeng-bot-ingress
spec:
  tls:
    - hosts:
        - bot.openlookeng.io
      secretName: openlookeng-bot-tls
  rules:
    - host: bot.openlookeng.io
      http:
        paths:
          - backend:
              serviceName: openlookeng-bot-internal
              servicePort: 80
            path: /
